--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <head>
   <base href="./">
   <meta charset="utf-8">
-  <meta http-equiv="Content-Security-Policy" content="default-src 'self' https://fonts.googleapis.com https://fonts.gstatic.com https://api.weather.gov 'unsafe-inline'">
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self' https://fonts.googleapis.com https://fonts.gstatic.com https://api.weather.gov https://www.airnowapi.org 'unsafe-inline'">
   <meta name="format-detection" content="telephone=no">
   <meta name="msapplication-tap-highlight" content="no">
   <meta name="viewport" content="initial-scale=1, width=device-width, viewport-fit=cover">
